[tool.poetry]
name = "objecttracker"
version = "3.0.4"
description = ""
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.0"
pydantic = "^2.0.0"
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.11.2" }
visionapi_yq = {git = "https://github.com/siri-rouser/visionapi_YQ.git", rev= '7ea2ec0240dfb50f597c89d97c8e75872aa9204c', subdirectory="visionapi_YQ", tag = "0.0.1" }
opencv-python = "^4.7.0.72"
torch = "^2.2.1"
torchvision = "^0.17.1"
filterpy = "^1.4.5"
redis = "^5.0.0"
pydantic-settings = "^2.0.3"
prometheus-client = "^0.17.1"
boxmot = "10.0.64"
google = "^3.0.0"
protobuf = "^5.27.3"
einops = "0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
